@@ -3,10 +3,11 @@ export( "J" )
 export( "%instanceof%" )
 export(is.jnull, .r2j, .rJava.base.path)
 exportClasses(jobjRef, jarrayRef, jfloat, jlong, jbyte, jchar, jclassName)
-exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character, length, head, tail, "[", "[[" )
+exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character, length, head, tail, "[", "[[", str )
 importFrom(methods, new)
 importFrom(utils,head)
 importFrom(utils,tail)
+importFrom(utils,str)
 S3method(with, jobjRef)
 S3method(within, jobjRef)
 S3method(with, jclassName)
