@@ -1,5 +1,6 @@
 \name{show}
 \alias{show,jobjRef-method}
+\alias{str,jobjRef-method}
 \alias{show,jarrayRef-method}
 \alias{show,jclassName-method}
 \title{Show a Java Object Reference}
@@ -14,6 +15,7 @@
     \item{show}{\code{signature(object = "jobjRef")}: ... }
     \item{show}{\code{signature(object = "jarrayRef")}: ... }
     \item{show}{\code{signature(object = "jclassName")}: ... }
+    \item{str}{\code{signature(object = "jobjRef")}: currently identical to show }
   }
 }
 \keyword{interface}
